--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,9 @@ default: &default
 development:
   <<: *default
   database: ahzinwfp
+  user: ahzinwfp
+  password: n-pgmzBXXMRxEIzlEH14SYvxXbuPpSrt
+  host: john.db.elephantsql.com
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
